Move gui editor footer to tool-container. Fix some overflowing style issues. Add empty tool-inputs form

--- a/src/app/components/forms/inputs/types/expression-input.component.scss
+++ b/src/app/components/forms/inputs/types/expression-input.component.scss
@@ -1,7 +1,7 @@
 @import "../../../../../assets/sass/variables";
 
-/*For some reason the input-group has ad default z-index: 2*/
 .expression-input-group {
+    z-index: 0;
 
     .add-expression {
         background: #ffffff;
