--- a/src/app/components/workspace/workspace.component.scss
+++ b/src/app/components/workspace/workspace.component.scss
@@ -4,8 +4,4 @@ workspace {
     width: 100%;
     height: 100%;
     position:relative;
-
-    .lm_content {
-        overflow-y: auto;
-    }
 }
