--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -46,4 +46,4 @@ $button-blue-text: #0275d8;
 
 $editor-padding-top: 10px;
 $editor-header-height: 40px;
-$editor-footer-height: 50px
+$editor-footer-height: 50px;
